--- a/assets/css/events.css
+++ b/assets/css/events.css
@@ -6,10 +6,6 @@
 	--fontfamilysans: 'Montserrat', sans-serif;
 }
 
-.fusion-top-header .fusion-header{
-	background: transparent !important;
-}
-
 #menu-item-273920{
 	padding-right: 1.25rem;
 }
@@ -42,6 +38,10 @@
 
 .fusion-header{
 	margin-bottom: 1rem;
+}
+
+.fusion-top-header .fusion-header{
+	background: #fff !important;
 }
 
 .fusion-sticky-logo-1.fusion-header-v1 .fusion-sticky-logo{
@@ -89,7 +89,7 @@ h1.event-title, h2.event-title{
 	line-height: 1.85rem;
 }
 
-.post-content.events-template .button, .single-event-page .button, .ticket-selector-submit-btn[type=submit], .cart-results-register-button, .cart-results-view-cart-lnk, .cart-results-go-back-button{
+.post-content.events-template .button, .single-event-page .button, .ticket-selector-submit-btn[type=submit], .cart-results-register-button, .cart-results-view-cart-lnk, .cart-results-go-back-button, .spco-next-step-btn{
 	font-size: 1.35rem;
 	background-color: var(--bluelight);
 	text-transform: uppercase;
@@ -98,6 +98,8 @@ h1.event-title, h2.event-title{
 	padding: .75rem 1.5rem;
 	transition: opacity 0.3s ease;
 	letter-spacing: .015rem;
+	line-height: 1.25em;
+	border: 0;
 }
 
 .cart-results-register-button:hover, .cart-results-view-cart-lnk:hover, .cart-results-go-back-button:hover{
@@ -398,6 +400,7 @@ h1.event-title, h2.event-title{
    flex-shrink: 0;
    padding-right: 2rem;
    display: flex;
+   max-width: 532px;
 }
 
 .single-event__image img{
@@ -689,4 +692,40 @@ ul.single-event__members__list li:last-child {
 
 .tkt-slctr-tbl-wrap-dv table th{
 	font-size: 1.15rem;
+}
+
+.cart-results-register-button {
+    display: none !important;
+}
+
+#cart-results-current-cart-dv{
+	border-top: none;
+	margin-top: 0;
+	display: flex;
+	flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#cart-results-current-cart-dv h5{
+	margin-bottom: 0;
+}
+
+#cart-results-modal-dv{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+}
+
+.cart-results-wrap-dv{
+	display: flex;
+}
+
+#cart-results-whats-next-buttons-dv{
+	order: 3;
+}
+
+.return-to-event-cart-mini-cart-lnk{
+	border: 0;
 }
